[gd_scene load_steps=2 format=3 uid="uid://dialogue_ui"]

[ext_resource type="Script" path="res://scenes/dialogue/dialogue_ui.gd" id="1"]

[node name="DialogueUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -250.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Portrait" type="TextureRect" parent="DialoguePanel"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 170.0
expand_mode = 1
stretch_mode = 5

[node name="SpeakerName" type="Label" parent="DialoguePanel"]
layout_mode = 0
offset_left = 150.0
offset_top = 10.0
offset_right = 700.0
offset_bottom = 35.0
text = ""

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 0
offset_left = 150.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = 140.0
text = ""
fit_content = true
scroll_active = false

[node name="ChoiceContainer" type="VBoxContainer" parent="DialoguePanel"]
visible = false
layout_mode = 0
offset_left = 150.0
offset_top = 145.0
offset_right = -20.0
offset_bottom = 220.0
theme_override_constants/separation = 5

[node name="ContinueIndicator" type="Label" parent="DialoguePanel"]
visible = false
layout_mode = 0
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -25.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 0
text = ">>>"
horizontal_alignment = 2
